<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="stStationStatus" Id="{ceb7c38e-5cf7-43c2-b991-d63b777bc2dc}">
    <Declaration><![CDATA[TYPE stStationStatus :
STRUCT
	Clear : BOOL;
	Complete : BOOL;
	Operating : BOOL;
	Ready : BOOL;
	HasMover : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>